# sing-along

./: README.md  pyproject.toml  receiving_text
Separation of audio and instrumental/: Separation_audio_instrumental_0.py
core/application/: README.md  dto.py  exceptions.py  separation.py  text_generation.py  timestamp_linking.py  video_director.py  video_maker.py  voice_recognition.py
core/infrastructure/: README.md
core/infrastructure/separation/: spleeter_ai.py
core/infrastructure/text_generation/: genius.py  mock.py
core/infrastructure/timestamp_linking/: per_word_alignment_linking.py  text_alignment_linking.py
core/infrastructure/video_maker/: ffmpeg_video_maker.py
core/infrastructure/voice_recognition/: whisper_ai.py
core/presentation/: README.md  telegram.py
docs/: architecture.md  audio-separator.md
media/Cage the elephant - Come a little closer/: linking.json  original_text.txt  transcribe.json  transcribe_mine.json
media/Imagine Dragons - Bones/: linking.json  original_text.txt  transcribe.json
media/Wengie & i-dle - EMPIRE (English Version)/: linking.json  original_text.txt  transcribe.json
media/Немного нервно - Пожар/: linking.json  original_text.txt  transcribe.json  transcribe_ascii.json
telegram-bot/: bot.py
video_maker/: sandbox.py
